--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body class="nav-sidebar docked nav-fixed">
   <header id="quarto-header" class="headroom fixed-top">
-    <nav class="navbar navbar-expand-lg navbar-dark ">
+    <nav class="navbar-expand-lg navbar-dark ">
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container">
   </div>
