--- a/dashboard.html
+++ b/dashboard.html
@@ -41,19 +41,19 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link active" href="./index.html" rel="" target="" aria-current="page">
+    <a class="nav-link active" href="index.html" rel="" target="" aria-current="page">
  <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./dashboard.html" rel="" target="">
+    <a class="nav-link" href="dashboard.html" rel="" target="">
  <span class="menu-text">Dashboard</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./modelos.html" rel="" target="">
+    <a class="nav-link" href="modelos.html" rel="" target="">
  <span class="menu-text">Modelos</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./aplicativo.html" rel="" target="">
+    <a class="nav-link" href="http://retina.inf.ufsc.br:8000/app/sinasc-v4" rel="" target="_blank">
  <span class="menu-text">Aplicativo</span></a>
   </li>  
 </ul>
@@ -72,10 +72,8 @@
            <p>Este site está de acordo com a versão 3.3.1 do Padrão Digital de Governo do Brasil - Design System. 2023 Copyright © PPGINFOS/UFSC</p>
          </div>
        </footer>
-       
   </div> <!-- end container-->
   </div> <!-- end container -grey bk-->
 </div><!-- end wrapper -->
-
 </body>
 </html> 
