--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link active" href="index.html" rel="" target="" aria-current="page">
+    <a class="nav-link active" href="./index.html" rel="" target="" aria-current="page">
  <span class="menu-text">Home</span></a>
   </li>    
   <li class="nav-item">
@@ -67,8 +67,10 @@
       <div class="intro-container">
         <div class="introTxt">
           <h1>Projeto Saúde da Mulher</h1>
-          <p>QUALIFICAÇÃO DA ATENÇÃO À SAÚDE DAS MULHERES COM O FOCO NA GESTAÇÃO, PARTO, PUERPÉRIO, PLANEJAMENTO FAMILIAR E CLIMATÉRIO</p>
-          <p>Meta 2 - Estruturação de Modelos Preditivos para ampliar a capacidade de intervenção nos riscos de morbimortalidade</p>
+          <p>Este Projeto trata da Qualificação da Atenção à Saúde das Mulheres com o foco na Gestação, Parto, Puerpério, Planejamento Familiar e Climatério, e teve iníco em Maio de 2021, com término previsto para abril de 2024, a partir da iniciativa da Dra. Lana de Lourdes Aguiar Lima - Diretor(a), do Departamento de Saúde Materno Infantil da Secretaria de Atenção Primária do Ministério da Saúde na época, e da Dra. Camila Baccin, da coordenação-geral de saúde perinatal e aleitamento materno (CGPAM/DSMI/MS) naquele período.
+          </p>
+          <p>Uma de suas metas estabeleceu a "Estruturação de Modelos Preditivos para ampliar a capacidade de intervenção nos riscos de morbimortalidade", que este site buscará apresentar a trajetória desenvolvida até aqui com resultados e sugestões para avançarmos em sua finalização e implementação.</p>
+          <p>Este TED está sob a Coordenação geral da equipe do IFF/FIOCRUZ : Maria Gomes, Cynthia Magluta, Luiza Beatriz Acioli, Luciane Binsfeld, e Alexandre Walter Fikota.</p>
         </div>
       </div>
       </div>
